AUTOMAKE_OPTIONS = gnu
bin_PROGRAMS = eversion
eversion_SOURCES = common.h control_device.cc control_device.h entity.cc entity.h font.cc font.h game.cc game.h gfxutil.cc gfxutil.h globals.h imagestack.cc imagestack.h input_device.cc input_device.h keyboard.cc keyboard.h layer.cc layer.h macros.h main.cc main.h map.cc map.h math.h mouse.cc mouse.h net.cc net.h sdl.h surface.cc surface.h textbox.cc textbox.h tileset.cc tileset.h timer.h types.h window.cc window.h
eversion_LIBS = `sdl-config --libs` -lSDL_net -lSDL_image